# autonomous-vehicle-rl-training

./: .gitignore  DEPLOYMENT.md  GITHUB_SETUP.md  README.md  REPOSITORY_INFO.txt  deploy.sh  push_to_github.sh  railway.json  start.command
autonomus/: CMakeLists.txt  install_tools.bat  installation_guide.txt  setup_env.bat  status_report.txt
autonomus/autonomous-rl-vehicle/simulator/: CMakeLists.txt  build.sh  build_and_run.sh  collision_areas.txt  generate_qtable.py  main.cpp  rl_state_notes.txt  run_simulator.sh  test.cpp
autonomus/frontend/: package-lock.json  package.json
rl-dashboard-nextgen/: package-lock.json  package.json  server.js
rl-dashboard-nextgen/client/: package-lock.json  package.json
rl-dashboard-nextgen/client/public/: index.html
rl-dashboard-nextgen/client/src/: App.js  App.old.js
